Bug #28525 Node failures in PGMAN at ndbrequire (line 430)
Submitted: 18 May 2007 18:08 Modified: 11 Jun 2007 22:26
Reporter: Todd Farmer
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.1.19 and earlier OS:Linux
Assigned to: Pekka Nousiainen Target Version:

[18 May 2007 18:08] Todd Farmer
Description:
While loading data to cluster after a version upgrade, data nodes generate errors and die
due to ndbrequire failures in PGMAN:

Time: Friday 18 May 2007 - 15:50:30
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or
missing error message, please report a bug)
Error: 2341
Error data: pgman.cpp
Error object: PGMAN (Line: 430) 0x00000002
Program: ./ndbd
Pid: 7782
Trace: /var/mnt/local/MySQLClusterSubs-0-B_DATA/ndb_4_trace.log.2
Version: mysql-5.1.15 ndb-6.1.8-beta
***EOM***

Note also that the trace log is incorrect:

...
TSMAN   001828 000431 000430 

--------------- Signal ----------------
...

The 431 entry is from TUX and the 430 entry is from PGMAN, but missing jamEntry() calls.

How to repeat:
N/A
[25 May 2007 13:08] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27333

ChangeSet@1.2472, 2007-05-25 12:25:15+02:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #28525 Node failures in PGMAN at ndbrequire (line 430)
[28 May 2007 12:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27437

ChangeSet@1.2473, 2007-05-28 12:20:34+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #28525 Node failures in PGMAN at ndbrequire (line 430)
  (part 2)
[11 Jun 2007 13:39] Bugs System
Pushed into 5.1.20-beta
[11 Jun 2007 22:26] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.20 changelog.
[3 Jul 2007 8:48] Jon Stephens
Also documented for telco-6.2.3 release.